# lmu_tracklimit_recorder

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
src/: config.py  database.py  geometry.py
src/boundary_editor/: README.md  canvas.py  editor.py  main.py
src/track_limit_recorder/: README.md  main.py  recorder.py
