[project]
name = "lmu-tracklimit-recorder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["pyLMUSharedMemory @ file:external_packages/pyLMUSharedMemory"]

[tool.setuptools.packages.find]
exclude = ["external_packages*", "helpers*"]
